--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "@apollo/server": "^4.12.1",
     "bcrypt": "^4.0.1",
-    "brcypt": "^1.0.1",
+  
     "express": "^4.19.2",
     "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.0.0"
   },
